Bug 149264 - assert in checkGlyphsEqual() when loading sw/qa/extras/uiwriter/data/tdf104649.docx
Summary: assert in checkGlyphsEqual() when loading sw/qa/extras/uiwriter/data/tdf10464...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-24 13:52 UTC by Michael Stahl
Modified: 2022-05-26 16:39 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
backtrace etc (42.54 KB, text/plain)
2022-05-24 13:56 UTC, Michael Stahl
Details
p *itWhole->second.Impl(0) (260.16 KB, text/plain)
2022-05-24 15:05 UTC, Michael Stahl
Details
with patch, asserts on different text (293.58 KB, text/plain)
2022-05-25 09:20 UTC, Michael Stahl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Stahl 2022-05-24 13:52:51 UTC
master/vcl/source/gdi/impglyphitem.cxx:295: void checkGlyphsEqual(const SalLayoutGlyphs&, const SalLayoutGlyphs&): Assertion `l1->isEqual(l2)' failed.
Comment 1 Michael Stahl 2022-05-24 13:56:40 UTC
Created attachment 180339 [details]
backtrace etc
Comment 2 Michael Stahl 2022-05-24 14:00:10 UTC
This is on Fedora 36, build is --without-system-libs commit 123d3a9301c90925c23cfb4806d7b0be01b975d6
Comment 3 Luboš Luňák 2022-05-24 14:53:16 UTC
Can you also go in the debugger up to SalLayoutGlyphsCache::GetLayoutGlyphs() and give me 'p *itWhole->second.Impl(0)' ?
Comment 4 Michael Stahl 2022-05-24 15:05:56 UTC
Created attachment 180341 [details]
p *itWhole->second.Impl(0)
Comment 5 Luboš Luňák 2022-05-25 03:48:29 UTC
I expect https://gerrit.libreoffice.org/c/core/+/134891 handles this?
Comment 6 Michael Stahl 2022-05-25 09:20:50 UTC
Created attachment 180364 [details]
with patch, asserts on different text
Comment 7 Commit Notification 2022-05-26 05:09:37 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/755ed6f5f062afecb157f06e6a3132873ca7b23f

do not use glyph subsets if LTR/RTL does not match (tdf#149264)

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Luboš Luňák 2022-05-26 05:11:00 UTC
I expect this should work now.
Comment 9 Michael Stahl 2022-05-26 16:39:08 UTC
yep no more asserts