check HB_GLYPH_FLAG_UNSAFE_TO_BREAK before and after (tdf#149264)

My reading of the documentation for the flag is that it should
be necessary to check only the cluster after the break position,
but tdf#149264 fails to break properly and has the flag only
before the break. So assume it's a harfbuzz bug (either code or
documentation) and check both before and after the break.

Change-Id: I997fcb8ff24c87bc3ba08ae6b50b4eb2f10a423e